logs/dag_id=dag_with_postgres_operator_v02/run_id=scheduled__2023-06-06T00:00:00+00:00/task_id=create_postgres_table/attempt=5.log
[2023-06-09T14:40:52.900+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.create_postgres_table scheduled__2023-06-06T00:00:00+00:00 [queued]>
[2023-06-09T14:40:52.906+0000] {taskinstance.py:1103} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v02.create_postgres_table scheduled__2023-06-06T00:00:00+00:00 [queued]>
[2023-06-09T14:40:52.907+0000] {taskinstance.py:1308} INFO - Starting attempt 5 of 10
[2023-06-09T14:40:52.915+0000] {taskinstance.py:1327} INFO - Executing <Task(PostgresOperator): create_postgres_table> on 2023-06-06 00:00:00+00:00
[2023-06-09T14:40:52.919+0000] {standard_task_runner.py:57} INFO - Started process 849 to run task
[2023-06-09T14:40:52.923+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v02', 'create_postgres_table', 'scheduled__2023-06-06T00:00:00+00:00', '--job-id', '11', '--raw', '--subdir', 'DAGS_FOLDER/dag_with_postgres_operator.py', '--cfg-path', '/tmp/tmpzc8r50w9']
[2023-06-09T14:40:52.926+0000] {standard_task_runner.py:85} INFO - Job 11: Subtask create_postgres_table
[2023-06-09T14:40:52.981+0000] {task_command.py:410} INFO - Running <TaskInstance: dag_with_postgres_operator_v02.create_postgres_table scheduled__2023-06-06T00:00:00+00:00 [running]> on host 94560a00d375
[2023-06-09T14:40:53.045+0000] {taskinstance.py:1547} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='znawawi' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v02' AIRFLOW_CTX_TASK_ID='create_postgres_table' AIRFLOW_CTX_EXECUTION_DATE='2023-06-06T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2023-06-06T00:00:00+00:00'
[2023-06-09T14:40:53.046+0000] {sql.py:262} INFO - Executing: "
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag)id)
            )
        
[2023-06-09T14:40:53.056+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-09T14:40:53.107+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-06-09T14:40:53.120+0000] {sql.py:375} INFO - Running statement: "
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag)id)
            )
        , parameters: None
[2023-06-09T14:40:53.123+0000] {taskinstance.py:1824} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 274, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: unterminated quoted identifier at or near ""
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag)id)
            )
        "
LINE 1: "
        ^

[2023-06-09T14:40:53.134+0000] {taskinstance.py:1350} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v02, task_id=create_postgres_table, execution_date=20230606T000000, start_date=20230609T144052, end_date=20230609T144053
[2023-06-09T14:40:53.143+0000] {standard_task_runner.py:109} ERROR - Failed to execute job 11 for task create_postgres_table (unterminated quoted identifier at or near ""
            create table if not exists dag_runs (
                dt date,
                dag_id character varying,
                primary key (dt, dag)id)
            )
        "
LINE 1: "
        ^
; 849)
[2023-06-09T14:40:53.176+0000] {local_task_job_runner.py:225} INFO - Task exited with return code 1
[2023-06-09T14:40:53.190+0000] {taskinstance.py:2651} INFO - 0 downstream tasks scheduled from follow-on schedule check
